--- a/semi-project-2/타이타닉 생존자 예측_ver1.0.ipynb
+++ b/semi-project-2/타이타닉 생존자 예측_ver1.0.ipynb
@@ -492,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1379,6 +1381,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    184\n",
+       "3    180\n",
+       "0    179\n",
+       "4    176\n",
+       "2    172\n",
+       "Name: fare_cat, dtype: int64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df['fare_cat'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -1887,6 +1914,26 @@
     "predict_kNN = clf_kNN.predict(X_test)\n",
     "accuracy_kNN = accuracy_score(y_test,predict_kNN)\n",
     "accuracy_kNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7873134328358209"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf_kNN.score(X_test, y_test)"
    ]
   },
   {
