추천시스템 가중치 부분 추가

--- a/final-project/2. 맥주 추천 시스템.ipynb
+++ b/final-project/2. 맥주 추천 시스템.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b87d4c89",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:26.427624Z",
-     "start_time": "2021-08-09T01:28:26.152780Z"
+     "end_time": "2021-08-10T23:55:30.351741Z",
+     "start_time": "2021-08-10T23:55:29.941501Z"
     }
    },
    "outputs": [],
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "61ea6c9f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:27.676316Z",
-     "start_time": "2021-08-09T01:28:27.586094Z"
+     "end_time": "2021-08-10T23:55:32.270282Z",
+     "start_time": "2021-08-10T23:55:32.178763Z"
     }
    },
    "outputs": [
@@ -156,7 +156,7 @@
        "4      4           2       5          2        9  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,12 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "18ae7f24",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:28.913344Z",
-     "start_time": "2021-08-09T01:28:28.863696Z"
+     "end_time": "2021-08-10T23:55:32.911240Z",
+     "start_time": "2021-08-10T23:55:32.858829Z"
     },
     "scrolled": true
    },
@@ -291,7 +291,7 @@
        "4           2       5          2        9  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,12 +314,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "01690ecd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:29.706116Z",
-     "start_time": "2021-08-09T01:28:29.682777Z"
+     "end_time": "2021-08-10T23:55:34.455202Z",
+     "start_time": "2021-08-10T23:55:34.429117Z"
     }
    },
    "outputs": [
@@ -350,12 +350,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "79e3d7a5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:31.143757Z",
-     "start_time": "2021-08-09T01:28:31.141318Z"
+     "end_time": "2021-08-10T23:55:37.622079Z",
+     "start_time": "2021-08-10T23:55:37.619172Z"
     }
    },
    "outputs": [],
@@ -372,12 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "01949957",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:33.103288Z",
-     "start_time": "2021-08-09T01:28:32.960762Z"
+     "end_time": "2021-08-10T23:55:38.317944Z",
+     "start_time": "2021-08-10T23:55:38.174128Z"
     }
    },
    "outputs": [
@@ -509,7 +509,7 @@
        "7           3       4          3        9  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,12 +536,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d08ab8f3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:34.159889Z",
-     "start_time": "2021-08-09T01:28:34.156325Z"
+     "end_time": "2021-08-10T23:55:39.671464Z",
+     "start_time": "2021-08-10T23:55:39.666836Z"
     }
    },
    "outputs": [
@@ -1108,8 +1108,8 @@
    "id": "94b34b09",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-09T01:28:48.475650Z",
-     "start_time": "2021-08-09T01:28:48.412466Z"
+     "end_time": "2021-08-10T23:55:45.200854Z",
+     "start_time": "2021-08-10T23:55:45.137341Z"
     }
    },
    "outputs": [
@@ -1365,12 +1365,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "7ab31fcd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-06T02:47:38.409619Z",
-     "start_time": "2021-08-06T02:47:38.378191Z"
+     "end_time": "2021-08-10T23:55:47.259662Z",
+     "start_time": "2021-08-10T23:55:46.489347Z"
     }
    },
    "outputs": [
@@ -1900,7 +1900,7 @@
        "[10 rows x 65 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1931,27 +1931,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "958baca4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-11T00:04:50.971879Z",
+     "start_time": "2021-08-11T00:04:50.956454Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>아이디</th>\n",
+       "      <th>맥주</th>\n",
+       "      <th>날짜</th>\n",
+       "      <th>평점</th>\n",
+       "      <th>Aroma</th>\n",
+       "      <th>Appearance</th>\n",
+       "      <th>Flavor</th>\n",
+       "      <th>Mouthfeel</th>\n",
+       "      <th>Overall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>snoworsummer</td>\n",
+       "      <td>Kloud Original Gravity</td>\n",
+       "      <td>March 7, 2020</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GuideDogSaint</td>\n",
+       "      <td>Kloud Original Gravity</td>\n",
+       "      <td>February 8, 2020</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>deanso</td>\n",
+       "      <td>Kloud Original Gravity</td>\n",
+       "      <td>January 16, 2020</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>onceblind</td>\n",
+       "      <td>Kloud Original Gravity</td>\n",
+       "      <td>December 28, 2019</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DrNosha</td>\n",
+       "      <td>Kloud Original Gravity</td>\n",
+       "      <td>December 20, 2019</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             아이디                      맥주                 날짜   평점  Aroma  \\\n",
+       "2   snoworsummer  Kloud Original Gravity      March 7, 2020  3.0      6   \n",
+       "4  GuideDogSaint  Kloud Original Gravity   February 8, 2020  2.2      4   \n",
+       "5         deanso  Kloud Original Gravity   January 16, 2020  2.3      4   \n",
+       "6      onceblind  Kloud Original Gravity  December 28, 2019  3.2      6   \n",
+       "7        DrNosha  Kloud Original Gravity  December 20, 2019  2.3      4   \n",
+       "\n",
+       "   Appearance  Flavor  Mouthfeel  Overall  \n",
+       "2           3       6          3       12  \n",
+       "4           2       5          2        9  \n",
+       "5           3       4          3        9  \n",
+       "6           5       6          4       11  \n",
+       "7           3       4          3        9  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "169cb388",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-11T00:04:53.577462Z",
+     "start_time": "2021-08-11T00:04:53.574747Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 가중치를 부여할 항목\n",
+    "detail = 'Aroma'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "56eb089c",
-   "metadata": {},
+   "execution_count": 31,
+   "id": "a8130ad8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-11T00:07:44.921635Z",
+     "start_time": "2021-08-11T00:07:44.915699Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# col 기준 코사인 유사도 계산\n",
+    "def recomm_feature(df, col):\n",
+    "    feature = col\n",
+    "    ratings = df[['아이디','맥주', feature]]\n",
+    "\n",
+    "    # 아이디가 인덱스인 피벗 테이블\n",
+    "    id_matrix = data.pivot_table(index='아이디', columns='맥주', values=feature)\n",
+    "    id_matrix = id_matrix.fillna(0)\n",
+    "\n",
+    "    # 맥주명이 인덱스인 피벗테이블\n",
+    "    beer_matrix = id_matrix.transpose()\n",
+    "\n",
+    "    # 아이템-유저 매트릭스로부터 코사인 유사도 구하기\n",
+    "    item_sim = cosine_similarity(beer_matrix, beer_matrix)\n",
+    "\n",
+    "    # cosine_similarity()로 반환된 넘파이 행렬에 맥주명을 매핑해 DataFrame으로 변환\n",
+    "    item_sim_df = pd.DataFrame(data=item_sim, index=id_matrix.columns, columns=id_matrix.columns)\n",
+    "\n",
+    "    return item_sim_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e9dfdfe",
-   "metadata": {},
+   "execution_count": 32,
+   "id": "cea4946d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-11T00:07:45.522338Z",
+     "start_time": "2021-08-11T00:07:45.387889Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_aroma = recomm_feature(data, 'Aroma')\n",
+    "df_flavor = recomm_feature(data, 'Flavor')\n",
+    "df_mouthfeel = recomm_feature(data, 'Mouthfeel')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1971,12 +2146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 39,
    "id": "0594de9e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-06T05:33:47.467609Z",
-     "start_time": "2021-08-06T05:33:47.464050Z"
+     "end_time": "2021-08-11T00:20:09.537809Z",
+     "start_time": "2021-08-11T00:20:09.534710Z"
     }
    },
    "outputs": [],
@@ -2020,12 +2195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 45,
    "id": "428e6793",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-06T05:33:48.860747Z",
-     "start_time": "2021-08-06T05:33:48.854274Z"
+     "end_time": "2021-08-11T00:27:34.200882Z",
+     "start_time": "2021-08-11T00:27:34.190889Z"
     }
    },
    "outputs": [
@@ -2034,14 +2209,14 @@
       "text/plain": [
        "맥주\n",
        "Asahi Super Dry    1.000000\n",
-       "Pilsner Urquell    0.669986\n",
-       "Hoegaarden         0.662297\n",
-       "Heineken           0.651910\n",
-       "Stella Artois      0.649364\n",
+       "Pilsner Urquell    0.660573\n",
+       "Hoegaarden         0.653037\n",
+       "Heineken           0.641379\n",
+       "Stella Artois      0.641110\n",
        "Name: Asahi Super Dry, dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,6 +2224,36 @@
    "source": [
     "# 가중치 부여\n",
     "recommend_beer_by_cosine_similarity(beer_similarity_weighted, 'Asahi Super Dry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "327a790f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-11T00:22:15.707449Z",
+     "start_time": "2021-08-11T00:22:15.701994Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Asahi Super Dry',\n",
+       " 'Pilsner Urquell',\n",
+       " 'Hoegaarden',\n",
+       " 'Heineken',\n",
+       " 'Stella Artois']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend_beer_by_cosine_similarity(beer_similarity_weighted, 'Asahi Super Dry').index.tolist() # toList"
    ]
   },
   {
