--- a/final-project/4-1. YOLO 맥주 이미지데이터 분석.ipynb
+++ b/final-project/4-1. YOLO 맥주 이미지데이터 분석.ipynb
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "# 맥주명으로 파일 생성 image/beer_name\n",
+    "# 맥주명으로 폴더 생성 image/beer_name\n",
     "def createFolder(directory):\n",
     "    try:\n",
     "        if not os.path.exists('image/' + directory):\n",
